--- a/daystar_app/templates/home.html
+++ b/daystar_app/templates/home.html
@@ -1,42 +1,93 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
-<div class="p-4 flex gap-4 justify-end">
-    <a href="" class="p-2 bg-green-500 text-white rounded-lg shadow-lg"> Add Baby </a>
-    <a href="" class="p-2 bg-blue-500 text-white rounded-lg shadow-lg"> Add Sitter </a>
-</div>
+<h3>All Babies</h3>
+<div class="row">
+  <div class="col-12">
+    {% if babies %}
+    <div class="card border-light mb-3 ms-4" >
+      <div class="card-header">
+        <i class="fa-solid fa-bars fa-lg"></i>Baby Records
+      </div>
+      <div class="card-body">
+        <p class="card-text">
+          <div class="table-responsive">
+            <div class="table-responsive">
+              <table class="table table-hover">
+                <thead>
+                  <tr>
+                    
+                   
+                    <th scope="col">First name</th>
+                    <th scope="col">Last name</th>
+                    <th scope="col">Gender</th>
+                    <th scope="col">Age</th>
+                    <th scope="col">TimeIn</th>
+                    <th scope="col">TimeOut</th>
+                    <th scope="col">Actions</th>
+                    
+                  </tr>
+                </thead>
+                <tbody> 
+                  {% for baby in babies %}
+                    <tr>
+                      <td>{{baby.baby_id}}</td>
+                      <td>{{baby.first_name}}</td>
+                      <td>{{baby.last_name}}</td>
+                      <td>{{baby.gender}}</td>
+                      <td>{{baby.age}}</td>
+                      <td>{{baby.timeIn}}</td>
+                      <td>{{baby.timeOut}}</td>
+                      <td>
+                        <button type="button" class=" btn btn-success me-1" href="/"data-bs-toggle="modal"data-bs-target="#myModal{{baby.id}}">
+                          <i class="fa-solid fa-circle-info fa-lg"></i>
+                        </button>
+                        <!--Modal component-->
+                        <div class="modal"id="myModal{{baby.id}}"tabindex="-1" aria-labelledby="myModalLabel1"aria-hidden="true">
+                          <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <h5 class="modal-title">
+                                  Baby {{ baby.first_name}} {{ baby.last_name}}
+                                </h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                                  <span aria-hidden="true"></span>
+                                </button>
+                              </div>
+                              <div class="modal-body">
+                                <ul class="list-unstyled">
+                                  <li>Baby Number: <strong>Baby:{{baby.baby_id}}</strong></li>
+                                  <li>First Name: <strong>{{baby.first_name}}</strong></li>
+                                  <li>Last Name: <strong>{{baby.last_name}}</strong></li>
+                                  <li>Gender: <strong>{{baby.gender}}</strong></li>
+                                  <li>Age: <strong> {{baby.age}}</strong></li>
+                                  <li>TimeIn: <strong>{{baby.timeIn}}</strong></li>
+                                  <li>TimeOut: <strong>{{baby.timeOut}}</strong></li>
 
-<div class="flex gap-2 p-4">
-    <input type="text" placeholder="Search Student" class="p-2 rounded-lg border w-full">
-    <button class="p-2 bg-black text-white rounded-lg"> Search </button>
-</div>
-<div class="grid grid-cols-2 gap-4 p-4">
-    <div class="w-full">
-        <p class="p-2 text-lg"> Recent Babies </p>
-        <table class="w-full">
-            <thead class="bg-black text-white">
-                <tr>
-                    <th> # </th>
-                    <th> Name </th>
-                    <th> Email </th>
-                    <th> Age </th>
-                </tr>
-            </thead>
-        </table>
+                                  
+                                </ul>
+                              </div>
+                              <div class="modal-footer">
+                                <button type="button" class="btn btn-primary">Save changes</button>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        
+                      </td>
+
+                    </tr>
+                  {% endfor %}
+              </table>
+            </div>
+          </p>
+        </div>
+      </div>
+      {% else %}
+      <h5 class ="alert alert-primary ms-4 me-4">No Baby Records</h5>
+      {% endif %}
     </div>
-    <div class="w-full">
-        <p class="p-2 text-lg"> Recent Courses </p>
-        <table class="w-full">
-            <thead class="bg-black text-white">
-                <tr>
-                    <th> # </th>
-                    <th> Course Name </th>
-                    <th> Price </th>
-                    <th> Start Date </th>
-                    <th> Duration </th>
-                </tr>
-            </thead>
-        </table>
-    </div>
-</div>
+  </div>
 {% endblock %}
