--- a/daystar_app/templates/base.html
+++ b/daystar_app/templates/base.html
@@ -18,20 +18,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+              </li>
+             
+              <li class="nav-item">
+                <a class="nav-link active" href="/" aria-current="true">Sitters</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link active" href="/" aria-current="true">Payment</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#" aria-current="true">Sitters</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#" aria-current="true">Babies</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#" aria-current="true">Babies</a>
-              </li>
+             
               <li class="nav-item">
                 <a class="nav-link active" href="#" aria-current="true">Procurement</a>
               </li>
